@@ -5,7 +5,7 @@ kotlin.code.style=official
 # Note: testng.kotlin-library.gradle.kts adds kotlin-stdlib for testImplementation
 kotlin.stdlib.default.dependency=false
 
-testng.version=7.6.1
+testng.version=7.6.2
 
 group=org.testng
 
