@@ -1,0 +1,3 @@
+package test.dataprovider.issue2800;
+
+public class TestClassGenerator extends AbstractTestClassGenerator {}
