@@ -1,0 +1,9 @@
+package test.dataprovider.issue2800;
+
+import org.testng.annotations.Test;
+
+public class TestClassSample {
+
+  @Test
+  public void hi() {}
+}
